--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-maps": "^1.18.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^4.11.1",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
